Fixed overflow. Apparently inputs are evil. Parents, don't let your kids play with inputs. Fuck you, inputs.

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,9 @@ body {
   margin: 0px;
   width: 100vw;
   height: 100vh;
-  /* overflow: hidden; */
+  max-width:100%;
+  max-height:100%;
+  overflow: hidden;
   background-color: rgb(82, 80, 78);
   display: flex;
   flex-direction: column;
@@ -16,30 +18,32 @@ body {
 }
 
 #content {
-  flex: 30;
+  flex: 30 0 0;
   display: flex;
 }
 
 #left {
-  flex: 1;
+  flex: 0 0 20%;
   display: flex;
   flex-direction: column;
 }
 
 #middle {
-  flex: 3;
-  display: block;
-  flex-wrap: nowrap;
+  flex: 0 0 60%;
+  display: flex;
+  flex-direction: column;
 }
 
 #right {
-  flex: 1;
+  flex: 0 0 20%;
   display: flex;
+  flex-direction: column;
 }
 
 .render-container {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
+  flex: 1 0 0;
   display: block;
   background-color: #646464;
 }
