--- a/styles/optionsbox.css
+++ b/styles/optionsbox.css
@@ -1,12 +1,17 @@
 .optionsbox {
-  flex: 1;
+  flex: 1 0 0;
+  display:flex;
+  flex-direction: column;
+  flex-wrap:wrap;
+}
+
+.optionsbox-option {
+  display:inline;
+  text-align:center;
 }
 
 .optionsbox-option-slider {
-  width: 90%;
-  margin-left: 5%;
   -webkit-appearance: none;
-  /* Override default CSS styles */
   appearance: none;
   outline: none;
   height: 10px;
@@ -16,42 +21,31 @@
 
 .optionsbox-option-slider::slider-thumb, .optionsbox-option-slider::-webkit-slider-thumb {
   -webkit-appearance: none;
-  /* Override default look */
   appearance: none;
   width: 25px;
-  /* Set a specific slider handle width */
   height: 25px;
-  /* Green background */
   cursor: pointer;
   outline: none;
 }
 
 .optionsbox-title {
-  display: inline-block;
-  font-size: x-large;
+  display: block;
+  font-size: large;
   color: inherit;
-  width: 100%;
   background-color: rgb(51, 51, 51);
   text-align: center;
 }
 
 .optionsbox-option-color {
-  width: 90%;
-  margin-left: 5%;
-  -webkit-appearance: none;
-  /* Override default CSS styles */
   appearance: none;
   outline: none;
   border-radius: 0.5em;
   border: none;
   display:block;
+  width:90%;
 }
 
 .optionsbox-option-boolean {
-  width: 90%;
-  margin-left: 5%;
-  /* -webkit-appearance: none; */
-  /* Override default CSS styles */
   /* appearance: none; */
   outline: none;
   border-radius: 0.5em;
@@ -59,15 +53,10 @@
 }
 
 .optionsbox-option-title {
-  width: 90%;
-  margin-left: 5%;
+  text-align: center;
 }
 
 .optionsbox-option-number {
-  width: 90%;
-  margin-left: 5%;
-  -webkit-appearance: none;
-  /* Override default CSS styles */
   appearance: none;
   outline: none;
   height: 15px;
@@ -76,12 +65,14 @@
   color: inherit;
   border-width: 1px;
   text-align: center;
+
+  /*Holy shit this one took forever to figure out:*/
+  width:80%;
+  resize: horizontal;
+  display:block;
 }
 
 .optionsbox-option-button {
-  width: 90%;
-  margin-left: 5%;
-  margin-top: 1em;
   -webkit-appearance: none;
   /* Override default CSS styles */
   appearance: none;
