--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -11,7 +11,7 @@
 }
 
 .render-canvas {
-  width: 100%;
+  /* width: 100%; */
   /* height: 100%; */
   position: absolute;
   cursor:url(../textures/canvas-cursor.png) 8 8, pointer;
